apps/etherpad/03-etherpad-ingress-ssl_.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Instructs the controller to send TLS connections directly
    #to the backend instead of letting NGINX decrypt the communication
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # In some scenarios the exposed URL in the backend service differs
    # from the specified path in the Ingress rule. Without a
    # rewrite any request will return 404
    nginx.ingress.kubernetes.io/rewrite-target: /
    # The name of our ClusterIssuer. We use ACME with
    # HTTP solver
    cert-manager.io/cluster-issuer: "letsencrypt"
  name: etherpad-ingress
spec:
  rules:
  - host: collaboration.13-40-112-200.nip.io
    http:
      paths:
      - backend:
          serviceName: etherpad
          servicePort: 9001
        path: /
  tls:
  - hosts:
    - collaboration.13-40-112-200.nip.io
    secretName: collaboration-tls
